workspace-sf/force-app/main/default/objects/PrestadoraGarantia__c/PrestadoraGarantia__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre a garantia e as contas (para o cadastro dos prestadores)</description>
    <label>Prestadora da garantia</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prestadoras da garantia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>