workspace-sf/force-app/main/default/objects/PrestadoraGarantia__c/fields/Prestadora__c.field-meta.xml
<CustomField>
    <fullName>Prestadora__c</fullName>
    <label>Prestadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PrestadorasCobertura</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>