workspace-sf/force-app/main/default/objects/PrestadoraGarantia__c/fields/PrestadoraGarantia__c.field-meta.xml
<CustomField>
    <fullName>PrestadoraGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestadora da garantia</label>
    <referenceTo>PrestadoraGarantia__c</referenceTo>
    <relationshipLabel>Prestadoras da garantia</relationshipLabel>
    <relationshipName>PrestadorasGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>